--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>urds</title>
     <link rel="shortcut icon" href="./static/images/timg.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="./static/css/reset.css">
   </head>
   <body>
     <div id="app"></div>
