--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>urds</title>
-    <link rel="shortcut icon" href="./static/images/timg.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./static/images/action.png" type="image/x-icon">
     <link rel="stylesheet" href="./static/css/reset.css">
   </head>
   <body>
